--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
+body{
+  background-color: whitesmoke;
+}
+.nav{
+  background-color: whitesmoke;
+  margin: 10px;
+  padding: 20px;
+}
+
+.navmenu{
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  font-family: "bilo";
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+a{
+  text-decoration: none;
+  padding: 10px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+}
+button{
+  cursor: pointer;
+}
+@media only screen and (max-width: 650px){
+  .navmenu{
+      font-size: 0.5em;
+      padding: 0;
   }
 }
+  
+  
+  .sos ul {
+    display: flex;
+    color: rgb(255, 255, 255);
+}
+.sos ul li{
+ margin: 5px;
+ list-style: none;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sos ul li img{
+    color: skyblue;
+    font-size: 15px;
+    max-width: 100%;
+    height: 20px;
+}
+
+.ct{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.ab{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 15px,10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
