--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,4 @@
-img {
+.foto {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -7,7 +7,6 @@ img {
 }
 
 .Home-container {
-    background: url('../../../public/HotelPic.jpg') center center/cover no-repeat;
     height: 100vh;
     width: 100%;
     display: flex; 
@@ -32,7 +31,8 @@ img {
   }
   
   .Home-btns {
-    margin-top: 32px;
+    display: flex;
+    margin-top: 0%;
   }
 
   .btn1{
