--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -17,14 +17,14 @@
 }
 
 .Home-container > h1 {
-    color: #fff;
+    color: rgb(255, 255, 255);
     font-size: 50px;
     margin-top: 100px;
   }
   
   .Home-container > p {
     margin-top: 8px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
